--- a/devshub_project/templates/base.html
+++ b/devshub_project/templates/base.html
@@ -21,6 +21,8 @@
   <div id="notifications" class="fixed bottom-4 right-4 z-50 space-y-2"></div>
 
   <script src="{% static "js/js.cookie.min.js" %}"></script>
+  <script src="{% static "js/header.js" %}"></script>
+
   {% block scripts %}
   {% endblock scripts %}
 </body>
